--- a/index.html
+++ b/index.html
@@ -233,6 +233,16 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -345,7 +355,18 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    
+    <!--Carousel Buttons-->
+    <script>
+        $(document).ready(function(){
+            $('#mycarousel').carousel({interval:2000}); //2000 ms mas rapida la animacion
+            $('#carousel-pause').click(function(){
+                $('#mycarousel').carousel('pause');//pausar animación con click
+            });
+            $('#carousel-play').click(function(){
+                $('#mycarousel').carousel('cycle');//reanudar animación
+            });
+        });
+    </script>
     
 
 </html>
